# dropit

./: README.md  app.ui  gdrag.c  gdrag.gresource.xml  meson.build
.github/workflows/: build.yml  ci.yml  release.yml
src/: app.ui  di-app-window.c  di-app-window.h  di-app.c  di-app.h  di-file-cell.c  di-file-cell.h  dropit.c  dropit.gresource.xml  file-cell.ui  gdrag.c  main.c  meson.build  style.css  window.ui
